src/components/Navigation_component/Navigation_component.css
.navigation {
  position: fixed;
  z-index: 1;
}

.navigationfullscreen {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: left;
  padding-left: 20%;
  height: 100vh;
  width: 20vw;
  line-height: 1.1;
  background: linear-gradient(to bottom, #fff 98%, #e6e6e6);
  border-right: solid black 1px;
}

.navigationphone {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 70px;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100vw;
  gap: 20px;
  background-color: white;
}

.extra-bold {
  color: #333333;
  font-size: 25px;
  font-weight: 800;
}

a {
  color: inherit;
  text-decoration: none;
}

a:hover {
  transform: scale(1.03);
  cursor: pointer;
}

router-link {
  text-decoration: none;
  color: inherit;
}

